--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
 language: node_js
 node_js:
-  - "9"
+  - "6"
+
+addons:
+  chrome: "latest"
+
 before_script:
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
+
 before_install:
   npm install karma-cli -g
-after_script:
-  - npm run report
+
+
+after_success:
+  - "npm run report"
