--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
   - "6.10.0"
+
 sudo: required
+dist: trusty
 addons:
   chrome: stable
 
@@ -12,3 +14,5 @@ before_script:
 
 before_install:
   npm install karma-cli -g
+
+os: osx
