--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ addons:
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  # give xvfb some time to start
-  - sleep 3
+  - sleep 3 # give xvfb some time to start
 
 before_install:
   npm install karma-cli -g
