--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "karma-mocha-reporter": "^2.2.3",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
+  },
+  "dependencies": {
+    "coveralls": "^2.13.3",
+    "mocha-lcov-reporter": "^1.3.0"
   }
 }
