--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 3 # give xvfb some time to start
-
+install:
+- npm install
 before_install:
   npm install karma-cli -g
 
-
+script:
+- npm test
 after_success:
   - npm run coveralls
