--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "directories": {
     "test": "karma start"
   },
-  "scripts": {
-    "test": "karma start",
-    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
+  "scirpts": {
+    "test": "node ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --colors ./configs/mocha/**/*.test.js",
+    "coverage": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/mayufo/homework1-another-coverage-#readme",
   "devDependencies": {
     "coveralls": "^2.13.3",
+    "istanbul": "^0.4.5",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
