--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
+    "coveralls": "*",
     "should": "^11.2.1"
-  },
-  "dependencies": {
-    "karma-coverage": "^1.1.1"
   }
 }
