--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
+  },
+  "dependencies": {
+    "url-extract": "^0.2.6"
   }
 }
