--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,12 @@ addons:
   firefox: "latest"
 
 before_script:
+  - phantomjs --version
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
 before_install:
   npm install karma-cli -g
+after_script:
+  - make test-coveralls
