--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
-    "mocha-lcov-reporter": "^1.3.0",
     "should": "^11.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2"
+  }
 }
