--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
+  },
+  "dependencies": {
+    "coveralls": "^3.0.0",
+    "mocha-lcov-reporter": "^1.3.0"
   }
 }
