--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "homepage": "https://github.com/FE-star/homework1#readme",
   "devDependencies": {
-    "karma": "^1.7.0",
-    "karma-firefox-launcher": "^1.0.1",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
-    "mocha": "^3.5.0",
-    "should": "^11.2.1"
+    "mocha": "^5.0.0",
+    "should": "^13.2.1"
   }
 }
