--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,13 @@ node_js:
   - "6"
 
 addons:
-  chorme: "latest"
+  chrome: stable
 
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 
 before_install:
   npm install karma-cli -g
