--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,11 @@ node_js:
   - "6"
 
 addons:
-  firefox: "latest"
+  chrome: stable
 
 script: node_modules/karma/bin/karma start karma.conf.js --single-run 
 
 before_script:
-  - export CHROME_BIN=chromium-browser
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-
-# before_install:
-#   - export CHROME_BIN=chromium-browser
-#   - export DISPLAY=:99.0
-#   - sh -e /etc/init.d/xvfb start
