--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ node_js:
 
 sudo: required
 addons:
-  - chrome: stable
-  - firefox: "49.0"
+  chrome: stable
+addons:
+  firefox: "49.0"
 
 before_script:
   - "export DISPLAY=:99.0"
