--- a/package.json
+++ b/package.json
@@ -20,14 +20,12 @@
   },
   "homepage": "https://github.com/FE-star/homework1#readme",
   "devDependencies": {
-    "coveralls": "^3.0.0",
-    "istanbul": "^0.4.5",
     "karma": "^1.7.1",
     "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
-    "mocha-lcov-reporter": "^1.3.0",
     "should": "^11.2.1"
   }
 }
