--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.1",
+    "karma-coverage": "*",
     "coveralls": "*",
+    "mocha-lcov-reporter": "*",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
