--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-coverage": "*",
+    "karma-coveralls": "*",
     "coveralls": "*",
     "mocha-lcov-reporter": "*",
     "karma-mocha": "^1.3.0",
