--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/FE-star/homework1#readme",
   "devDependencies": {
+    "eslint": "^4.16.0",
+    "eslint-config-prettier": "^2.9.0",
     "karma": "^1.7.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
