--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "karma start"
+    "test": "karma start",
+    "coveralls": "./node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
