--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
-    "should": "^11.2.1"
+    "should": "^11.2.1",
+    "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2"
   }
 }
