--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@ node_js:
   - "6"
 
 addons:
-  firefox: "latest"
+  chrome: "stable"
 
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   - sleep 3 # give xvfb some time to start
 
 before_install:
