--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,16 @@ language: node_js
 node_js:
   - "6"
 
-addons:
-  chrome: "stable"
+script: node_modules/karma/bin/karma start karma.conf.js --single-run
 
 before_script:
-  - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 3 # give xvfb some time to start
 
 before_install:
   npm install karma-cli -g
+
+branches:
+  only:
+    - eating-result
