--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-  - "6"
+  - "stable"
 
 addons:
-  firefox: "latest"
+  firefox: latest
   chrome: stable
 
 before_script:
