--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
   "homepage": "https://github.com/FE-star/homework1#readme",
   "devDependencies": {
     "karma": "^1.7.0",
+    "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
+  },
+  "dependencies": {
+    "url-extract": "^0.2.6"
   }
 }
