--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
 language: node_js
 node_js:
-  - "8"
-
+  - stable
 sudo: required
-
 addons:
   chrome: stable
+  firefox: latest
 
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-
-before_install:
-  - npm install karma-cli -g
