--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "karma start",
-    "cover": "./node_modules/.bin/istanbul cover _mocha",
-    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
