--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,35 @@
 language: node_js
 node_js:
-  - "6"
+  - "8"
 
 addons:
-  firefox: "latest"
-
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+  chrome: stable  # Chrome addon
 
 before_install:
   npm install karma-cli -g
+
+install:
+  npm install # default
+
+before_script:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start # xvfb提供运行的环境
+  - sleep 3 # 给xvfb一些时间开始
+
+script:
+  - npm run test
+
+branches:
+  only:
+    - master
+
+notifications:
+  email:
+    - 249121486@qq.com
+  on_success: change
+  on_failure: always # default
+
+cache:
+  directories:
+    - node_modules
