--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: required
 language: node_js
 node_js:
   - "8"
@@ -14,6 +15,8 @@ install:
 before_script:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
+  - sudo chown root /opt/google/chrome/chrome-sandbox
+  - sudo chmod 4755 /opt/google/chrome/chrome-sandbox
   - sh -e /etc/init.d/xvfb start # xvfb提供运行的环境
   - sleep 3 # 给xvfb一些时间开始
 
