--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
-node_js:
-  - "6"
+
+node_js: 10.3.0
 
 addons:
   firefox: "latest"
@@ -11,4 +11,8 @@ before_script:
   - sleep 3 # give xvfb some time to start
 
 before_install:
-  npm install karma-cli -g
+  - npm install karma-cli -g
+  - npm install
+
+script:
+  karma start --singleRun
