--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: node_js
 node_js:
   - "8"
-
 addons:
-  firefox: "latest"
+  chrome: stable
 
 before_script:
   - "export DISPLAY=:99.0"
