--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
+sudo: required
+addons:
+  chrome: stable
 language: node_js
 node_js:
   - "8"
-addons:
-  chrome: stable
-
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 
 before_install:
   npm install karma-cli -g
