--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: node_js
 node_js:
-  - "6"
+  - "8"
+
+# Travis-CI Caching
+cache:
+  directories:
+    - node_modules
 
 addons:
   firefox: "latest"
+
 
 before_script:
   - "export DISPLAY=:99.0"
