--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,9 @@
 language: node_js
 node_js:
-  - "8"
-
-# Travis-CI Caching
-cache:
-  directories:
-    - node_modules
+  - "6"
 
 addons:
-  firefox: "stable"
+  firefox: "latest"
 
 
 before_script:
