--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: node_js
 node_js:
   - "6"
-
+  
+sudo: required
 addons:
-  chrome: "latest"
+  chrome: stable
 
 before_script:
   - "export DISPLAY=:99.0"
