--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
 language: node_js
 node_js:
-  - '8'
-before_install:
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  - "6"
+
+addons:
+  firefox: "latest"
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-install:
-  - npm install -g karma
-  - npm install
+
+before_install:
+  npm install karma-cli -g
+
 script:
 - npm test
