--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "homepage": "https://github.com/FE-star/homework1#readme",
   "devDependencies": {
     "karma": "^1.7.0",
-    "karma-firefox-launcher": "^1.0.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
-    "should": "^11.2.1"
+    "should": "^11.2.1",
+    "karma-firefox-launcher": "^1.1.0"
   }
 }
