--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,9 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
+script: npm run test
+
 before_install:
   npm install karma-cli -g
+
+install: npm install 
