--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: node_js
 node_js:
   - "6"
 
+cache:
+  yarn: true
+  directories:
+    - node_modules
+
 addons:
   firefox: "latest"
 
@@ -15,4 +20,4 @@ script: npm run test
 before_install:
   npm install karma-cli -g
 
-install: npm install 
+install: yarn 
