--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "6"
+  - "10"
 
 addons:
   firefox: "latest"
@@ -12,3 +12,8 @@ before_script:
 
 before_install:
   npm install karma-cli -g
+
+script:
+    karma start --single-run
+
+cache: npm
