--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ addons:
 
 before_script:
   karma start
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 
 
 before_install:
