--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: node_js
-node_js:
-  - "6"
-
+node_js: '8.9.4'
+before_script: npm install karma-cli -g
 addons:
-  firefox: "latest"
+  chrome: stable
+dist: trusty
+sudo: false
 
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+# before_script:
+#   - "export DISPLAY=:99.0"
+#   - "sh -e /etc/init.d/xvfb start"
+#   - sleep 3 # give xvfb some time to start
 
-before_install:
-  npm install karma-cli -g
+before_install: npm install karma-cli -g
