--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js: '8.9.4'
 before_script: npm install karma-cli -g
 addons:
-  firefox: 'latest'
+  chrome: stable
 dist: trusty
 sudo: false
 
