--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
 node_js:
-  - "6"
+     "8"
 
 addons:
   firefox: "latest"
+
+script:
+  karma start
 
 before_script:
   - "export DISPLAY=:99.0"
