--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - sleep 3 # give xvfb some time to start
 
 before_install:
-  npm install karma-cli -g
-  npm install
+  - 'npm install karma-cli -g'
+  - 'npm install'
 script:
-  npm test
+  - 'npm test'
