--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,10 @@ before_script:
 
 before_install:
   npm install karma-cli -g
+
+"scripts":{
+  "test":"karma start --single-run"
+}
+
+chache:
+  npm
