--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,8 @@
 language: node_js
 node_js:
-  - "6"
-
-addons:
-  firefox: "latest"
-
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
-
+  - "8"
+script: karma start --single-run --browsers Firefox
 before_install:
-  npm install karma-cli -g
+  - npm install
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
