--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,8 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
+script:
+  karma start --single-run
+
 before_install:
   npm install karma-cli -g
