--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   },
   "homepage": "https://github.com/FE-star/homework1#readme",
   "devDependencies": {
-    "jsdom": "^14.0.0",
     "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.1",
-    "karma-jsdom-launcher": "^7.1.0",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
+  },
+  "dependencies": {
+    "require": "^2.4.20",
+    "requirejs": "^2.3.6"
   }
 }
