--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ node_js:
 
 addons:
   firefox: "latest"
-
+cache:
+  directories:
+    - node_modules
+install:
+  - npm install    
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
@@ -12,3 +16,5 @@ before_script:
 
 before_install:
   npm install karma-cli -g
+script:
+  - npm test
