--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "6"
 script: npm run travis
 addons:
-  firefox: "latest"
+  chrome: stable
 
 before_script:
   - "export DISPLAY=:99.0"
