--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,4 @@
-language: node_js
-node_js:
-  - "6"
-script:
-  - npm test
-addons:
-  chrome: stable
-
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
-
-before_install:
-  npm install karma-cli -g
+language: ruby
+rvm:
+ - 2.2
+ - jruby
