--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,17 @@
-language: ruby
-rvm:
- - 2.2
- - jruby
+language: node_js
+node_js:
+  - "6"
+
+addons:
+  chrome: stable
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
+script:
+  karma start --single-run
+
+before_install:
+  npm install karma-cli -g
