--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ language: node_js
 node_js:
 - "10"
 
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
-
+script: node_modules/karma/bin/karma start karma.conf.js --single-run
 before_install:
-  npm install karma-cli -g
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
