--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: node_js
 node_js:
   - "6"
 
+install:
+    - npm install
+test:
+    - npm run test
 
 before_script:
   - "export DISPLAY=:99.0"
