--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: node_js
 node_js:
-  - "6"
-
-addons:
-  firefox: "latest"
-
+  - "10.12.0"
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-
 before_install:
   npm install karma-cli -g
+script: 
+  karma start karma.conf.js --single-run 
