--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: node_js
 node_js:
-  - "10"
+  - "6"
+
+addons:
+  chrome: stable
+
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-script:
- - karma start karma.conf.js --single-run
+  - sleep 3 # give xvfb some time to start
+
+before_install:
+  npm install karma-cli -g
