--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ node_js:
 
 addons:
   chrome: stable
+services:
+  - xvfb
 
 before_script:
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
 before_install:
