--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ addons:
   chrome: stable
 
 before_script:
+  - export CHROME_BIN=chromium-browser
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
