--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ addons:
 before_script:
   - export CHROME_BIN=chromium-browser
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
+  services:
+  - xvfb
   - sleep 3 # give xvfb some time to start
 
 before_install:
