--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 node_js:
   - "6"
 
-# addons:
-#   chrome: stable
+addons:
+  chrome: stable
 
 before_script:
   - "export DISPLAY=:99.0"
