--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  # - sleep 3 # give xvfb some time to start
+  - sleep 3 # give xvfb some time to start
 
 script:
  - karma start karma.conf.js --single-run
