--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ node_js:
 addons:
   chrome: stable
 
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+services:
+    - xvfb
 
 before_install:
   npm install karma-cli -g
