--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: node_js
 node_js:
   - "6"
 
+# Travis-CI Caching
+cache:
+  directories:
+    - node_modules
+
 addons:
   chrome: stable
 
