--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,13 @@ node_js:
 addons:
   chrome: stable
 
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
-
+#before_script:
+#  - "export DISPLAY=:99.0"
+#  - "sh -e /etc/init.d/xvfb start"
+#  - sleep 3 # give xvfb some time to start
+services:
+  - xvfb
+script: 
+  - karma start karma.conf.js --single-run
 before_install:
   npm install karma-cli -g
