--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ addons:
 
 services:
   - xvfb
-  
+
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+  #- "export DISPLAY=:99.0"
+  #- "sh -e /etc/init.d/xvfb start"
+  #- sleep 3 # give xvfb some time to start
 
 before_install:
   npm install karma-cli -g
