--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
   - xvfb
 
 before_script:
+  #  https://docs.travis-ci.com/user/gui-and-headless-browsers/#using-xvfb-to-run-tests-that-require-a-gui
   #- "export DISPLAY=:99.0"
   #- "sh -e /etc/init.d/xvfb start"
   #- sleep 3 # give xvfb some time to start
@@ -17,4 +18,4 @@ before_install:
   npm install karma-cli -g
 
 script:
-  xvfb-run make test
+  npm test
