--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ addons:
   chrome: stable
 
 before_script:
-  # - "export DISPLAY=:99.0"
+  - "export DISPLAY=:99.0"
   # - "sh -e /etc/init.d/xvfb start"
-  # - sleep 3 # give xvfb some time to start
+  - sleep 3 # give xvfb some time to start
 
 before_install:
-  npm install karma-cli -g
+  npm install karma-cli -g  && npm install
