--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,15 @@ node_js:
 addons:
   chrome: stable
 
-before_script:
-  # - "export DISPLAY=:99.0"
-  # - "sh -e /etc/init.d/xvfb start"
-  # - sleep 3 # give xvfb some time to start
+before_install:
+  - npm install
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+# before_script:
+#   # - "export DISPLAY=:99.0"
+#   # - "sh -e /etc/init.d/xvfb start"
+#   # - sleep 3 # give xvfb some time to start
 
 before_install:
-  npm install karma-cli -g  && npm install
+  npm install karma-cli -g
