--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
 #   # - "export DISPLAY=:99.0"
 #   # - "sh -e /etc/init.d/xvfb start"
 #   # - sleep 3 # give xvfb some time to start
-
+services:
+  - xvfb
 before_install:
   npm install karma-cli -g
