--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,10 @@ services:
   - xvfb
 before_install:
   npm install karma-cli -g
+
+  deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  on:
+    branch: master
