--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,15 @@ language: node_js
 node_js:
   - "10"
 
+cache:
+  directories:
+    - node_modules
+
 addons:
   chrome: stable
 
-before_install:
+
+before_script:
   - npm install
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
@@ -15,8 +20,7 @@ before_install:
 #   # - "export DISPLAY=:99.0"
 #   # - "sh -e /etc/init.d/xvfb start"
 #   # - sleep 3 # give xvfb some time to start
-services:
-  - xvfb
+
 before_install:
   npm install karma-cli -g
 
@@ -24,5 +28,29 @@ before_install:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
-  on:
+on:
     branch: master
+
+services:
+  - xvfb
+
+install:
+  - npm install
+  - npm install hexo-deployer-git --save
+
+
+# before_script:
+ # - npm install -g gulp
+    
+script:
+  - hexo clean
+  - hexo generate
+
+after_script:
+#  - cd ./public
+#  - git init
+  - git config user.name "cai"
+  - git config user.email "2287716986@qq.com"
+#  - git add .
+#  - git commit -m "Update docs"
+#  - git push --force --quiet "${Travis}@${GH_REF}" master:master
