--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,18 @@
 language: node_js
 node_js:
-  - "6"
+  - "node"
+  - "10.16.0"
 
 addons:
   chrome: stable
 
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
-
+#before_script:
+#  - "export DISPLAY=:99.0"
+#  - "sh -e /etc/init.d/xvfb start"
+#  - sleep 3 # give xvfb some time to start
+services:
+  - xvfb
+script: 
+  - karma start karma.conf.js --single-run
 before_install:
   npm install karma-cli -g
