--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,15 @@ node_js:
 
 addons:
   chrome: stable
+  
+services:
+  - xvfb
 
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+  # - "export DISPLAY=:99.0"
+  # - "sh -e /etc/init.d/xvfb start"
+  # - sleep 3 # give xvfb some time to start
 
 before_install:
   npm install karma-cli -g
+  npm run test
