--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ addons:
 
 before_script:
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
+  - "sh -e /etc/init.d"
   - sleep 3 # give xvfb some time to start
-
+servies: 
+  - xvfb
 before_install:
   npm install karma-cli -g
