--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d"
   - sleep 3 # give xvfb some time to start
-servies: 
+services: 
   - xvfb
 before_install:
   npm install karma-cli -g
