--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,11 @@
 language: node_js
 node_js:
   - "6"
-
 addons:
   chrome: stable
-
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
 services:
   - xvfb
 before_install:
   npm install karma-cli -g
 script:
-  - npm run test
+  - npm run start
