--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 language: node_js
 node_js:
-  - "6"
+  - "8"
+#Travis-CI Caching
+cache:
+  directories:
+    -node_modules
 
 addons:
   chrome: stable
 
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+dist: xenial
+services:
+  -xvfb
 
 before_install:
   npm install karma-cli -g
